Fixes to the build script (images were not being compiled) and CSS for closed modal btn on mobile

--- a/src/styles/layout/media-queries.scss
+++ b/src/styles/layout/media-queries.scss
@@ -244,7 +244,7 @@ and (max-device-width: 799px) {
 
 			#close-modal {
 				top: $space-extra;
-				right: $space-extra;
+				right: $space-large / 2;
 				left: auto;
 
 				@include transform(translate(0, 0));
